update contract address

--- a/src/resources/styles/themes/light.scss
+++ b/src/resources/styles/themes/light.scss
@@ -7,12 +7,12 @@
 // }
 
 :root {
-  --theme-background: #fffdfa;
+  --theme-background: #fff;
   --input-color: #808080;
   --input-font-color: #fff;
-  --card-color: #585858;
+  --card-color: #383838;
   --theme-color-blue: #fff;
-  --theme-color: #585858;
+  --theme-color: #383838;
   --light-color: 
       0 0 7px #fff,
       0 0 10px #fff,
